# ollama-server-benchmark

./: .gitignore  LICENSE  README.md  benchmark.yml  pyproject.toml
.github/workflows/: ruff.yml
analysis/: benchmark-analysis.ipynb
src/: main.py  ollama_server.py  server_response.py
