[project]
name = "ollama-server-benchmark"
version = "0.1.0"
description = "Python script for evaluating the performance of Ollama servers using the Ollama API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "structlog>=25.2.0",
]

[tool.ruff]
include = ["src/**/*.py"]
